Fixed container height on mobile

--- a/static/css/theme.less
+++ b/static/css/theme.less
@@ -25,13 +25,18 @@ body {
 }
 
 .navbar-inner {
-	background:rgba(255,255,255,0.85);
+	@media @phoneUp {
+		background:rgba(255,255,255,0.85);
+	}
 }
 
 #main-container {
 	background-color:rgba(255,255,255,0.85);
-	padding:10px;
-	padding-top:20px;
+	padding:20px 10px;
+	
+	@media @desktopUp {
+		padding-top:20px;
+	}
 	
 	@media @phoneUp {
 		box-shadow:0 0 20px rgba(0,0,0,0.5);
@@ -40,7 +45,11 @@ body {
 		border-radius:10px;
 	}
 	
-	@media @desktopUp {
-		padding-top:20px;
+	@media @phoneDown {
+		position:absolute;
+		top:51px;
+		left:0;
+		right:0;
+		bottom:0;
 	}
 }
